--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,21 @@
 [project]
-name = "name"
+name = "operational-research.uni"
 version = "0.0.1"
-# dependencies = []
+dependencies = [
+    "matplotlib>=3.10.7",
+    "pulp>=3.3.0",
+    "seaborn>=0.13.2",
+]
 
 [build-system]
 requires = ["setuptools", "setuptools_scm"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+packages = [
+    "transportation-problem",
+    "minimum-spanning-tree",
+]
 
 [tool.ruff]
 preview = true
